--- a/messi.html
+++ b/messi.html
@@ -12,9 +12,9 @@
     <h3> amar akash amar batsch amar mone bajay basi</h3>                              
     <h4> o amr desher mati</h4>
 
-    <img src="car.jpg"
+    <img src="car.jpg" alt=""><img>
 
 
-    <P>---------------------</P>
+    <p>------------
 </body>
 </html>                           
