--- a/messi.html
+++ b/messi.html
@@ -12,8 +12,9 @@
     <h3> amar akash amar batsch amar mone bajay basi</h3>                              
     <h4> o amr desher mati</h4>
 
-    <img src="car.jpg" alt=""><img>
-    <img src="car.jpg"alt="">
+    <!-- <img src="car.jpg" alt=""><img> -->
+    <!-- <img src="car.jpg"alt=""> -->
+    <img src="race.jpg"alt="">
 
 
     <p>------------
